oop_mro/tests/trybuild/fail_unknown_base.rs
use oop_mro::prelude::*;

oop_class! {
    class Dog: Animal {}
}

fn main() {}
